apps/core-services/argocd/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: core-services
spec:
  tls:
  - secretName: cert-argo.dev.skyloft.cc
  rules:
  - host: argo.dev.skyloft.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
